-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: 2.5.5
-
Component/s: Networking, Stability
-
None
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Example from a test failure on a Windows 64 2008+ build:
m31003| 2014-02-14T16:29:50.166+0000 [eventTerminate] shutdown event signaled, will terminate after current cmd ends m31003| 2014-02-14T16:29:50.166+0000 [eventTerminate] now exiting m31003| dbexit: 2014-02-14T16:29:50.166+0000 [eventTerminate] shutdown: going to close listening sockets... m31003| 2014-02-14T16:29:50.166+0000 [eventTerminate] closing listening socket: 436 m31003| 2014-02-14T16:29:50.166+0000 [initandlisten] ERROR: Windows WSAEventSelect returned errno:10038 An operation was attempted on something that is not a socket. m31003| 2014-02-14T16:29:50.166+0000 [eventTerminate] shutdown: going to flush diaglog... m31003| 2014-02-14T16:29:50.166+0000 [initandlisten] Fatal Assertion 16727 m31003| 2014-02-14T16:29:50.166+0000 [eventTerminate] shutdown: going to close sockets... m31003| 2014-02-14T16:29:50.166+0000 [eventTerminate] shutdown: waiting for fs preallocator... m31003| 2014-02-14T16:29:50.167+0000 [eventTerminate] shutdown: lock for final commit... m31003| 2014-02-14T16:29:50.167+0000 [eventTerminate] shutdown: final commit... m31003| 2014-02-14T16:29:50.167+0000 [eventTerminate] _groupCommit m31003| 2014-02-14T16:29:50.167+0000 [eventTerminate] journal REMAPPRIVATEVIEW m31003| 2014-02-14T16:29:50.167+0000 [eventTerminate] journal REMAPPRIVATEVIEW done startedAt: 5 n:2 0ms m31003| 2014-02-14T16:29:50.167+0000 [eventTerminate] groupCommit end m31003| 2014-02-14T16:29:50.167+0000 [conn1] Socket recv() errno:10004 A blocking operation was interrupted by a call to WSACancelBlockingCall. 127.0.0.1:49852 m31003| 2014-02-14T16:29:50.167+0000 [conn1] SocketException: remote: 127.0.0.1:49852 error: 9001 socket exception [RECV_ERROR] server [127.0.0.1:49852] m31003| 2014-02-14T16:29:50.167+0000 [conn1] end connection 127.0.0.1:49852 (0 connections now open) m31000| 2014-02-14T16:29:50.168+0000 [conn15] end connection 127.0.0.1:49855 (7 connections now open) m31001| 2014-02-14T16:29:50.168+0000 [conn7] end connection 127.0.0.1:49854 (3 connections now open) m31003| 2014-02-14T16:29:51.141+0000 [initandlisten] mongod.exe ...\src\mongo\util\stacktrace.cpp(169) mongo::printStackTrace+0x43 m31003| 2014-02-14T16:29:51.141+0000 [initandlisten] mongod.exe ...\src\mongo\util\log.cpp(158) mongo::logContext+0x9c m31003| 2014-02-14T16:29:51.141+0000 [initandlisten] mongod.exe ...\src\mongo\util\assert_util.cpp(139) mongo::fassertFailed+0x84 m31003| 2014-02-14T16:29:51.141+0000 [initandlisten] mongod.exe ...\src\mongo\util\net\listen.cpp(391) mongo::Listener::initAndListen+0xca6 m31003| 2014-02-14T16:29:51.142+0000 [initandlisten] mongod.exe ...\src\mongo\db\db.cpp(295) mongo::listen+0x125 m31003| 2014-02-14T16:29:51.142+0000 [initandlisten] mongod.exe ...\src\mongo\db\db.cpp(771) mongo::_initAndListen+0xc8c m31003| 2014-02-14T16:29:51.142+0000 [initandlisten] mongod.exe ...\src\mongo\db\db.cpp(776) mongo::initAndListen+0x27 m31003| 2014-02-14T16:29:51.142+0000 [initandlisten] mongod.exe ...\src\mongo\db\db.cpp(988) mongoDbMain+0x2b4 m31003| 2014-02-14T16:29:51.142+0000 [initandlisten] mongod.exe ...\src\mongo\db\db.cpp(819) wmain+0x35 m31001| 2014-02-14T16:29:51.142+0000 [FileAllocator] done allocating datafile D:\data\db/testSet-1\test2.ns, size: 16MB, took 1.115 secs m31003| 2014-02-14T16:29:51.142+0000 [initandlisten] mongod.exe f:\dd\vctools\crt_bld\self_64_amd64\crt\src\crt0.c(278) __tmainCRTStartup+0x13b m31003| 2014-02-14T16:29:51.142+0000 [initandlisten] kernel32.dll BaseThreadInitThunk+0xd m31003| 2014-02-14T16:29:51.142+0000 [initandlisten] m31003| 2014-02-14T16:29:51.143+0000 [initandlisten] m31003| m31003| ***aborting after fassert() failure m31003|